--- a/tutorial/tutorial.html
+++ b/tutorial/tutorial.html
@@ -16,8 +16,7 @@
 
 <blockquote>
 <p>Warning: This tutorial has been prepared for the static material accompanying
-SGP Grad School 2014. Please find our up-to-date tutorial notes at
-<a href="https://github.com/libigl/libigl/blob/master/tutorial/tutorial.html">https://github.com/libigl/libigl/blob/master/tutorial/tutorial.html</a></p>
+SGP Grad School 2014. Please find our <a href="http://htmlpreview.github.io/?https://github.com/libigl/libigl/blob/master/tutorial/tutorial.html">up-to-date tutorial notes</a>.</p>
 </blockquote>
 
 <h1 id="libigltutorialnotes">libigl tutorial notes</h1>
