update index.html to match README.md
Former-commit-id: 501e1d31b3f467cba1cb759f391593de0eb31e2c

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 <link rel='stylesheet' href='http://yandex.st/highlightjs/7.3/styles/default.min.css'>
 <script src='http://yandex.st/highlightjs/7.3/highlight.min.js'></script>
 <script>hljs.initHighlightingOnLoad();</script>
+libigl - A simple c++ geometry processing library
+=================================================
 </head>
 <body>
 
-<h1 id="libigl-asimplecgeometryprocessinglibrary">libigl - A simple c++ geometry processing library</h1>
+<figure>
+<img src="tutorial/images/libigl-logo.jpg" alt="" />
+<figcaption></figcaption></figure>
 
 <p><a href="http://igl.ethz.ch/projects/libigl/">http://igl.ethz.ch/projects/libigl/</a>
 <a href="https://github.com/alecjacobson/libigl/">https://github.com/alecjacobson/libigl/</a></p>
@@ -20,10 +24,11 @@
 <p>Copyright 2014 - Alec Jacobson, Daniele Panozzo, Olga Diamanti, Kenshi
 Takayama, Leo Sacht, Wenzel Jacob, etc.</p>
 
-<p>This is first and foremost a <em>header</em> library. Each header file should contain
-a single function. The function may have multiple prototypes. All functions
-should use the igl namespace and should adhere to the conventions and styles
-listed below.</p>
+<p>Libigl is first and foremost a <em>header</em> library. Each header file should
+contain a single function. This function may have multiple overloads and
+prototypes. All functions should use the <code>igl::</code> namespace and should adhere to
+the conventions and styles listed in the <a href="style_guidelines.html">style
+guidelines</a>.</p>
 
 <blockquote>
 <p><strong>New:</strong> As of 1 July 2014, we have released libigl as beta version 1.0.
