--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <link rel='stylesheet' href='http://yandex.st/highlightjs/7.3/styles/default.min.css'>
 <script src='http://yandex.st/highlightjs/7.3/highlight.min.js'></script>
 <script>hljs.initHighlightingOnLoad();</script>
-libigl - A simple c++ geometry processing library
-=================================================
+# libigl - A simple c++ geometry processing library
 </head>
 <body>
 
