--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <link rel='stylesheet' href='http://yandex.st/highlightjs/7.3/styles/default.min.css'>
 <script src='http://yandex.st/highlightjs/7.3/highlight.min.js'></script>
 <script>hljs.initHighlightingOnLoad();</script>
-# libigl - A simple c++ geometry processing library
 </head>
 <body>
+
+<h1 id="libigl-asimplecgeometryprocessinglibrary">libigl - A simple c++ geometry processing library</h1>
 
 <figure>
 <img src="tutorial/images/libigl-logo.jpg" alt="" />
