small note in tutorial

--- a/tutorial/tutorial.html
+++ b/tutorial/tutorial.html
@@ -15,7 +15,7 @@
 
 <h1 id="libigltutorialnotes">libigl tutorial notes</h1>
 
-<h4 id="danielepanozzoandalecjacobsonsgpgraduateschool2014">Daniele Panozzo and Alec Jacobson, SGP Graduate School 2014</h4>
+<h4 id="aspresentedbydanielepanozzoandalecjacobsondatsgpgraduateschool2014">as presented by Daniele Panozzo and Alec Jacobsond at SGP Graduate School 2014</h4>
 
 <figure>
 <img src="images/libigl-logo.jpg" alt="" />
