update index.html to match README.md

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <img src="tutorial/images/libigl-logo.jpg" alt="" />
 <figcaption></figcaption></figure>
 
-<p><a href="http://igl.ethz.ch/projects/libigl/">http://igl.ethz.ch/projects/libigl/</a>
-<a href="https://github.com/alecjacobson/libigl/">https://github.com/alecjacobson/libigl/</a></p>
+<p><a href="http://libigl.github.io/libigl/">http://libigl.github.io/libigl/</a>
+<a href="https://github.com/libigl/libigl/">https://github.com/libigl/libigl/</a></p>
 
 <p>Copyright 2014 - Alec Jacobson, Daniele Panozzo, Olga Diamanti, Kenshi
 Takayama, Leo Sacht, Wenzel Jacob, etc.</p>
