update index.html to match README.md
Former-commit-id: cf2e50aeb607f885a5cef4d144e1232ce5304980

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ The library may also be <a href="build/README.md">compiled</a> into a statically
 library, for faster compile times with your projects.</p>
 
 <p>We use the <a href="http://eigen.tuxfamily.org">Eigen</a> library heavily in our code. Our
-group prototypes a lot in MATLAB, and we have a useful <a href="tutorial/matlab-to-eigen.html">conversion
+group prototypes a lot in MATLAB, and we have a useful <a href="matlab-to-eigen.html">conversion
 table</a> from
 MATLAB to libigl/Eigen.</p>
 
