update index.html to match README.md
Former-commit-id: 8b07a9a8eec7277214ebfb224fe7d7a3e57668d1

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ like MATLAB.</p>
 <p>It is first and foremost a header library. Each header file contains a single
 function. Most are tailored to operate on a generic triangle mesh stored in an
 n-by&#8211;3 matrix of vertex positions V and an m-by&#8211;3 matrix of triangle indices F.
-The library may also be <a href="build/README.md">compiled</a> into a statically linked
+The library may also be <a href="build/">compiled</a> into a statically linked
 library, for faster compile times with your projects.</p>
 
 <p>We use the <a href="http://eigen.tuxfamily.org">Eigen</a> library heavily in our code. Our
