update index.html to match README.md

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ BibTeX entry:</p>
 <pre><code class="bibtex">@misc{libigl,
   title = {{libigl}: A simple {C++} geometry processing library},
   author = {Alec Jacobson and Daniele Panozzo and others},
-  note = {http://igl.ethz.ch/projects/libigl/},
+  note = {http://libigl.github.io/libigl/},
   year = {2014},
 }
 </code></pre>
