--- a/file-formats/index.html
+++ b/file-formats/index.html
@@ -27,7 +27,12 @@
     href=http://www.cs.berkeley.edu/~jrs/stellar/#fileformats>Stellar</a>.
     </li>
     <li><a href="http://tetgen.berlios.de/fformats.off.html">.off</a> Geomview's polyhedral file format</li>
-    <li><a href="http://en.wikipedia.org/wiki/Wavefront_.obj_file#File_format">.obj</a> Wavefront object file format. Usually unsafe to assume anything more than vertex positions and triangle indices are supported</li>
+    <li><a
+    href="http://en.wikipedia.org/wiki/Wavefront_.obj_file#File_format">.obj</a>
+    Wavefront object file format. Usually unsafe to assume anything more than
+    vertex positions and triangle indices are supported</li>
+    <li><a href=http://en.wikipedia.org/wiki/PLY_%28file_format%29>.ply</a>
+    Polygon File Format, supporting ASCII and binary encoding</li>
     <li><a
     href=https://en.wikipedia.org/wiki/Portable_Network_Graphics>.png</a>
     Portable Network Graphics image file. IGLLIB (in the libiglpng extra)
