--- a/tutorial/tutorial.html
+++ b/tutorial/tutorial.html
@@ -2789,9 +2789,8 @@ SGP 2013</p>
 </li>
 
 <li id="fn:29" class="citation"><span class="citekey" style="display:none">jacobson_2013</span><p>Alec Jacobson, Ladislav Kavan, and Olga Sorkine.
-[&#8220;Robust Inside-Outside Segmentation using Generalized Winding
-Numbers,&#8221;](https://www.google.com/search?q=Robust+Inside-Outside+Segmentation
-using+Generalized+Winding+Numbers) 2013.</p>
+<a href="https://www.google.com/search?q=Robust+Inside-Outside+Segmentation+using+Generalized+Winding+Numbers">&#8220;Robust Inside-Outside Segmentation using Generalized Winding
+Numbers,&#8221;</a> 2013.</p>
 </li>
 
 </ol>
